--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@material-ui/core": "^4.5.1",
     "blockly": "^2.20190722.1",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
@@ -80,10 +81,12 @@
     "ip": "1.1.5",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "node-blockly": "^1.1.2",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
+    "react-immutable-proptypes": "^2.1.0",
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
@@ -91,7 +94,10 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "skulpt": "^0.11.1",
+    "styled-components": "4.2.0",
+    "tls": "0.0.1",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
