--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-items-carousel": "^2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-webcam": "^4.0.0",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
